project/visa/test/assembler/error/dune.inc
; dune file generated by '%{bin:visa} fmt gen-dune' -- do not edit.

(rule
 (with-stdout-to
  duplicated-constant.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:duplicated-constant.asm}")))

(rule
 (alias fmt)
 (action
  (diff duplicated-constant.asm duplicated-constant.asm.pp.output)))

(rule
 (with-stdout-to
  duplicated-label.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:duplicated-label.asm}")))

(rule
 (alias fmt)
 (action
  (diff duplicated-label.asm duplicated-label.asm.pp.output)))

(rule
 (with-stdout-to
  duplicated-macro-parameter.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:duplicated-macro-parameter.asm}")))

(rule
 (alias fmt)
 (action
  (diff
   duplicated-macro-parameter.asm
   duplicated-macro-parameter.asm.pp.output)))

(rule
 (with-stdout-to
  duplicated-macro.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:duplicated-macro.asm}")))

(rule
 (alias fmt)
 (action
  (diff duplicated-macro.asm duplicated-macro.asm.pp.output)))

(rule
 (with-stdout-to
  invalid-arguments.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:invalid-arguments.asm}")))

(rule
 (alias fmt)
 (action
  (diff invalid-arguments.asm invalid-arguments.asm.pp.output)))

(rule
 (with-stdout-to
  label-without-instruction.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:label-without-instruction.asm}")))

(rule
 (alias fmt)
 (action
  (diff
   label-without-instruction.asm
   label-without-instruction.asm.pp.output)))

(rule
 (with-stdout-to
  undefined-macro.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:undefined-macro.asm}")))

(rule
 (alias fmt)
 (action
  (diff undefined-macro.asm undefined-macro.asm.pp.output)))

(rule
 (with-stdout-to
  unused-label.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:unused-label.asm}")))

(rule
 (alias fmt)
 (action
  (diff unused-label.asm unused-label.asm.pp.output)))

(rule
 (with-stdout-to
  unused-macro-parameter.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:unused-macro-parameter.asm}")))

(rule
 (alias fmt)
 (action
  (diff unused-macro-parameter.asm unused-macro-parameter.asm.pp.output)))

(rule
 (with-stdout-to
  unused-macro.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:unused-macro.asm}")))

(rule
 (alias fmt)
 (action
  (diff unused-macro.asm unused-macro.asm.pp.output)))

(rule
 (with-stdout-to
  unused-var.asm.pp.output
  (bash "%{bin:visa} fmt file %{dep:unused-var.asm}")))

(rule
 (alias fmt)
 (action
  (diff unused-var.asm unused-var.asm.pp.output)))
